Update auth to use HTTP cookies for token delivery and continue to migrating from NUXT to HTMX

--- a/server/internal/ui/views/layouts/main.html
+++ b/server/internal/ui/views/layouts/main.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <title>CookieFarm</title>
   <link rel="stylesheet" href="/css/output.css">
-  <script src="/js/htmx.min.js"></script>
+  <script src="/js/htmx.min.js" defer></script>
+  <!-- <script type="module" src="/js/config.js" defer></script> -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-[var(--background)] text-[var(--foreground)]">
   <main class="p-4">
