Migrated the config dialog on Htmx,html/template,tailwindcss

--- a/server/assets/css/global.css
+++ b/server/assets/css/global.css
@@ -159,3 +159,24 @@
         @apply bg-background text-foreground;
     }
 }
+
+
+.input {
+    @apply file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-40 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color, box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive
+}
+
+.label {
+    @apply flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50
+}
+
+.button {
+    @apply inline-flex w-full justify-center rounded-md bg-primary px-3 py-2 text-sm font-semibold text-black shadow-xs sm:ml-3 sm:w-auto hover:bg-primary/90
+}
+
+.tag {
+    @apply bg-secondary text-secondary-foreground px-2 py-1 rounded-md text-sm flex items-center gap-1;
+}
+
+.tag-close {
+    @apply text-red-500 cursor-pointer hover:text-red-700;
+}
