--- a/server/internal/ui/views/layouts/main.html
+++ b/server/internal/ui/views/layouts/main.html
@@ -5,7 +5,9 @@
   <title>CookieFarm</title>
   <link rel="stylesheet" href="/css/output.css">
   <script src="/js/htmx.min.js" defer></script>
-  <!-- <script type="module" src="/js/config.js" defer></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-[var(--background)] text-[var(--foreground)]">
