--- a/server/internal/ui/views/partials/flags_rows.html
+++ b/server/internal/ui/views/partials/flags_rows.html
@@ -1,11 +1,11 @@
 {{ range .Flags }}
-<tr class="hover:bg-gray-100">
-  <td class="px-4 py-2">{{ .ID }}</td>
-  <td class="px-4 py-2">{{ .FlagCode }}</td>
-  <td class="px-4 py-2">{{ .ServiceName }}{{ .ServicePort }}</td>
-  <td class="px-4 py-2">{{ .Status }}</td>
-  <td class="px-4 py-2">{{ .SubmitTime }}</td>
-  <td class="px-4 py-2">{{ .ResponseTime }}</td>
+<tr>
+  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .ID }}</td>
+  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .FlagCode }}</td>
+  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .ServiceName }}{{ .ServicePort }}</td>
+  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .Status }}</td>
+  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .SubmitTime }}</td>
+  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .ResponseTime }}</td>
 </tr>
 {{ else }}
 <tr>
